Remove the last JDK 7/8 shims, and all reflection outside classloader and arena access
SystemJarFinder searched for JRE/JDK lib and ext jars, which the JDK 9
extension mechanism removal (JEP 220) made impossible to find: lib/ext does
not exist, the only jar under lib/ is jrt-fs.jar (already skipped), and the
JVM refuses to start when java.ext.dirs is set. It was also mildly harmful,
because ClasspathOrder used its results to drop matching entries returned by
a system classloader, so a user jar sitting in a legacy extension directory
would have been silently removed from the classpath.

Removed with it: ClassGraph.acceptLibOrExtJars/rejectLibOrExtJars,
ScanSpec.libOrExtJarAcceptReject, ClasspathFinder.addSystemJarClasspathEntries
and ClasspathOrder.addSystemClasspathEntry.

Also removed three reflection sites that are neither classloader field access
nor JDK 22+ arena access:

- FileUtils.runFinalization, called reflectively only because
  Runtime.runFinalization is deprecated for removal (JEP 421). Its one caller
  was FileMapping's retry path, where it did nothing useful: a mapping is
  released by its Cleaner, a phantom-reference mechanism, not by finalization.
  The System.gc() before it is kept.

- Both reflective AccessController.doPrivileged implementations, in
  ReflectionUtils and StandardReflectionDriver. The Security Manager was
  deprecated in JDK 17 (JEP 411) and permanently disabled in JDK 24 (JEP 486);
  StandardReflectionDriver already carried a TODO planning this removal.

- CallStackReader's doPrivileged wrap and its pre-JDK-9 fallback chain, which
  resolved each stack frame's class with ClassGraph's own classloader and so
  was unreliable anyway. It is now a static StackWalker call.

ReflectionUtils.staticMethodForNameOrNull had no caller left once
runFinalization was gone, so it is removed too.

The sun.misc.Unsafe.invokeCleaner path stays: it is the complement of the
arena path and is still needed on JDK 17 to 21.